Add cinematic scroll transition on landing

--- a/index.html
+++ b/index.html
@@ -66,6 +66,34 @@
         </div>
       </section>
 
+      <section class="scroll-cinematic">
+        <div class="scene">
+          <div class="scene-copy">
+            <p class="eyebrow">Seamless motion</p>
+            <h2>Cloud storage with a creative spine.</h2>
+            <p class="hero-copy">
+              The vault moves like a keynote. Layers glide, focus shifts, and your work
+              stays perfectly framed the whole way down.
+            </p>
+          </div>
+          <div class="scene-stage" data-scene>
+            <div class="orb" aria-hidden="true"></div>
+            <div class="frame frame-one">
+              <span>Upload</span>
+              <p>Drag in the raw. We stage the perfect preview.</p>
+            </div>
+            <div class="frame frame-two">
+              <span>Arrange</span>
+              <p>Curate galleries that feel like a studio wall.</p>
+            </div>
+            <div class="frame frame-three">
+              <span>Share</span>
+              <p>Send a link that looks like a release.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section class="feature-grid">
         <div class="feature reveal">
           <h3>Smart stacks</h3>
